--- a/less/footer.less
+++ b/less/footer.less
@@ -5,7 +5,7 @@ footer {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    border-radius: 2rem;
+    border-radius: 1px;
 
     .credits {
         display: flex;
