--- a/less/home-page.less
+++ b/less/home-page.less
@@ -19,6 +19,7 @@ img.souptop {
     color: white;
     background-color: #25B7D3;
     border-color: #25B7D3;
+    margin: 10px;
     a {
         text-decoration: none;
         color: white;
@@ -32,6 +33,9 @@ img.souptop {
     justify-content: center;
     align-items: center;
     width: 100%;
+
+    // background: linear-gradient(transparent 1%, #e9ecef 28%, #e9ecef 50%, transparent 95%);
+    background: linear-gradient(transparent 1%, #e9ecef 36%, #e9ecef 78%, transparent 104%);
 
     .content {
         width: 50%;
