--- a/less/variables.less
+++ b/less/variables.less
@@ -1,2 +1,11 @@
-@phone: (max-width = 500px); 
-@tablet: (max-width = 880px); 
+@phone: (max-width: 600px); 
+@tablet: (max-width: 990px); 
+
+// @phone: (screen and (max-width = 600px));
+// @tablet: (screen and (max-width = 992px)); 
+
+//   @media screen and (max-width: 600px) {
+//     .jumbotronAbout h1 {
+//         font-size: 1.5rem;
+//     }
+//   }
